<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DensityDial</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main_activity">Main Functions</string>
    <string name="title_activity_set_current_vol">SetCurrentVol</string>    
    <string name="title_activity_litre_density_lookup">LitreDensityLookup</string>
    <string name="title_activity_display_results">DisplayResults</string>
    
    <string name="title_fragment_original_volume"> Please enter the Current Volume</string>
    <string name="title_fragment_enter_gravity"> Please enter the Initial Gravity and Desired Gravity</string>
    <string name="title_fragment_view_results"> add this many litres to the solution</string>
    
    <string name="field_current_vol">Current Vol</string>
    <string name="field_current_abv">Current Abv</string>
    <string name="field_current_kgs">current Kgs</string>
    <string name="field_desired_vol">Desired Vol</string>
    <string name="field_desired_abv">Desired Abv</string>
    <string name="field_desired_kgs">Desired Kgs</string>
    <string name="field_litres">Litres to add</string>
   
    
    <string name="button_submit">Submit</string>
    <string name="button_view_change">Swipe View</string>
        
    
 
    



</resources>
