<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/current_volume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/field_current_vol" />
        
        
        <requestFocus />

        <EditText
            android:id="@+id/desired_abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/current_abv"
            android:layout_below="@+id/current_abv"
            android:ems="10"
            android:hint="@string/field_desired_abv" />

        <EditText
            android:id="@+id/current_abv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/current_volume"
            android:layout_below="@+id/current_volume"
            android:ems="10"
            android:hint="@string/field_current_abv" />

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/desired_abv"
            android:layout_below="@+id/desired_abv"
            android:layout_marginTop="19dp"
            android:text="@string/button_submit"
        	android:onClick="getLitres" />

                <Button
                    android:id="@+id/change_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/submit"
                    android:layout_centerVertical="true"
                    android:onClick="swipeView"
                    android:text="@string/button_view_change" />
   
</RelativeLayout>